--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("https://wallpapers-clan.com/wp-content/uploads/2024/11/chill-guy-background.jpg");
+  background-image: url("https://static.vecteezy.com/system/resources/previews/003/124/786/original/cute-pig-cartoon-icon-illustration-vector.jpg");
   text-align: center;
   background-size: cover;
   background-repeat: no-repeat;
